# GPT-Trader

./: .claudeignore  .coverage  .coveragerc  .env  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHIVE_INVENTORY.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.local.md.example  CLAUDE.md  CLEANUP_CHECKLIST.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  CONTRIBUTING.md  CRITICAL_FIXES_COMPLETE.md  DEPRECATION_AUDIT_REPORT.md  DEPRECATION_CLEANUP_COMPLETE.md  DEVELOPER_EXPERIENCE_IMPROVEMENTS.md  ISSUE.md  Makefile  ONLINE_LEARNING_IMPLEMENTATION_REPORT.md  PERFORMANCE_REPORT_AUTO_RETRAINING.md  PERFORMANCE_REPORT_ITERROWS_OPTIMIZATION.md  PICKLE_REMOVAL_REPORT.md  PROJECT_ROADMAP.md  PROJECT_ROADMAP_REALITY.md  PR_SUMMARY.md  README.md  SOAK_TEST_QUICKSTART.md  SYSTEM_TEST_WALKTHROUGH.md  TESTING_COVERAGE.md  TEST_REFACTORING_PLAN.md  TOOLING_ANALYSIS_INDEX.md  TOOLING_LANDSCAPE_ANALYSIS.md  TOOLING_QUICK_REFERENCE.md  USER_EXPERIENCE_REPORT.md  WEEK_7_IMPLEMENTATION_REPORT.md  benchmark.py  (+17 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.knowledge/: AGENTS.md  ARCHITECTURE.md  AUTONOMOUS_TRADING_RECOMMENDATIONS.md  AVAILABLE_TOOLS.md  DELEGATION_WORKFLOWS.md  KNOWN_FAILURES.md  MISSING_RESOURCES.md  ORGANIZATION.md  PROJECT_CONTEXT.md  PROJECT_STATE.json  README.md  ROADMAP.json  RULES.md  SETUP.md  START_HERE.md  STATE.json  SYSTEM_REALITY.md  WHERE_TO_PUT.md  WORKFLOW_PAIN_POINTS.md
.openclaw-test/: recovery-601.txt
.swarm/: memory.db-shm
agents/: README.md
archived/: __init__.py  checkpoint_handler_monolithic_2025_09_29.py  recovery_handler_monolithic_2025_09_29.py
benchmark_results/: benchmark_report.md
benchmarks/: serialization_benchmark.py
config/: .pre-commit-config.yaml  acceptance_tuning.json  adaptive_portfolio_aggressive.json  adaptive_portfolio_config.json  adaptive_portfolio_conservative.json  alpaca_config_template.py  backtest_config.json  database.yaml  live_trade_config.json  ml_strategy_config.json  position_sizing_config.json  pyproject.toml  stage1_scaleup.json  stage2_scaleup.json  stage3_scaleup.json  system_config.json  system_config.yaml  tui_preferences.json
demos/: README.md  adaptive_portfolio_data_provider_demo.py  alpaca_paper_trading_demo.py  coinbase_data_transition_demo.py  coinbase_mock_demo.py  coinbase_sandbox_runner.py  download_data.py  execution_simulator_demo.py  integrated_backtest.py  live_trade_error_handling_demo.py  mean_reversion_demo.py  ml_orchestrator_integration.py  ml_pipeline_demo.py  ml_strategy_demo.py  orchestrator_execution_demo.py  position_tracking_demo.py  production_orchestrator_demo.py  test_coinbase_data_provider.py  test_momentum_integration.py  test_trend_breakout.py  test_volatility_integration.py  test_volatility_strategy.py  working_strategy_demo.py
docs/: 24_WEEK_SPRINT_MASTER_PLAN.md  AGENT_CONFUSION_POINTS.md  AGENT_QUICK_REFERENCE.md  ALPACA_PAPER_TRADING_SETUP.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_FILEMAP.md  AUDIT_REPORT.md  AUTONOMOUS_PORTFOLIO_ROADMAP.md  AUTONOMOUS_QUICK_REFERENCE.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE_MD_ENHANCED_WORKFLOW.md  CLAUDE_MD_WORKFLOW.md  CLEANUP_PROGRESS_REPORT.md  CLEANUP_SESSION_REPORT.md  CLI_REFERENCE.md  CODEBASE_CLEANUP_FINAL_REPORT.md  CODEBASE_CLEANUP_GUIDE.md  CODEBASE_CLEANUP_SUMMARY.md  CODEBASE_HEALTH_ASSESSMENT.md  COINBASE.md  COINBASE_README.md  COMPOSITION_ROOT_MIGRATION_GUIDE.md  CONSOLIDATION_PRIORITIES.md  CORE_CLEANUP_ROADMAP.md  DASHBOARD_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPRECATIONS.md  DEVELOPER_GUIDE.md  DEVELOPMENT_GUIDELINES.md  DEVELOPMENT_ROADMAP_V2.md  DIRECTION.md  DI_POLICY.md  DOCS_GUIDELINES.md  DOCUMENTATION_ORGANIZATION_SUMMARY.md  EMERGENCY_PROCEDURES.md  ENHANCED_EVOLUTION.md  FEATURE_FLAGS.md  GO_LIVE_CHECKLIST.md  (+94 more)
examples/: README.md  alpaca_orchestrator_integration.py  architecture_migration_demo.py  backtest_production_example.py  backtesting_example.py  component_based_strategy_example.py  composition_root_example.py  demo_enhanced_cli.py  derivatives_features_demo.py  derivatives_stress_test_example.py  enhanced_evolution_example.py  hierarchical_evolution_example.py  intx_eligibility_example.py  knowledge_enhanced_evolution_example.py  multi_objective_optimization_example.py  optimization_example.py  phase2_integration_demo.py  phase3_meta_learning_example.py  phase3_observability_demo.py  phase4_advanced_analytics_example.py  phase4_operational_excellence_demo.py  phase5_production_integration_example.py  pipeline_demo.py  rapid_evolution_test.py  risk_integration_example.py  strategy_allocator_integration_demo.py  strategy_uplift_validation_example.py  structured_logging_demo.py  verify_strategy_dev_toolkit.py
experiments/: experiments.json
minimal_system/: README.md  demo.py  executor.py  strategy.py
monitoring/: .env.example  README.md  alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  docker-compose.yml  grafana-dashboard.json  grafana_dashboard.json  prometheus.yml
results/: ma_filters_btc.json  ma_filters_combined_btc.json  ma_filters_combined_eth.json  ma_filters_eth.json  ma_rsi_btc.json  ma_trend_btc.json  ma_trend_eth.json  sweep_summary.json
scripts/: README.md  __init__.py  alpaca_paper_trading_demo.py  analyze_execution_errors.py  analyze_grid.py  apply_optimal_parameters.py  backtest_runner.py  build_tui_css.py  capability_probe.py  check_all_permissions.py  check_api_permissions.py  check_package_coverage.py  check_soak_status.sh  check_time_sync.py  classification_vs_regression_comparison.py  cleanup_artifacts.sh  cleanup_backtests.py  collect_soak_metrics.sh  collect_spot_data.py  compare_jwt_implementations.py  confidence_integration_demo.py  configure_log_rotation.sh  consolidate_databases.py  container_entrypoint.sh  dashboard.html  dashboard.py  debug_401_detailed.py  debug_500_portfolio.py  debug_500_simple.py  debug_allocator_columns.py  debug_date_issue.py  debug_failing_strategies.py  debug_full_orchestrator.py  debug_jwt_detailed.py  debug_orchestrator.py  debug_position_sizing.py  debug_trade_recording.py  deploy.sh  (+121 more)
(+6245 files in other folders)
