[project]
name = "gpt-trader"
version = "0.1.0"
description = "Equities-first trading bot scaffold with adapter-based data, backtesting, and paper trading hooks."
readme = "README.md"
authors = [{name = "RJ + GPT-5"}]
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core trading dependencies (always required)
    "coinbase-advanced-py>=1.8.2,<2.0.0",
    "pydantic>=2.7.4,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "click>=8.1.7,<9.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    # Security (core for production trading)
    "cryptography>=43.0.0,<47.0.0",
    "pyotp>=2.9.0,<3.0.0",
    "pyjwt>=2.9.0,<3.0.0",
    "optuna>=4.0.0,<5.0.0",
    "pandas>=2.3.3",
    "textual>=0.87.0,<1.0.0",
    # Transitive security fixes (pin minimum versions for CVE patches)
    "urllib3>=2.6.0",   # GHSA-gm62-xv2j-4w53, GHSA-2xpw-w6gg-jr37
    "filelock>=3.20.1", # GHSA-w853-jp5j-5j7f
]

[project.optional-dependencies]
# Core trading functionality
market-data = ["yfinance>=0.2.40,<0.3.0"]
monitoring = ["psutil>=6.0.0,<7.0.0"]
live-trade = ["websocket-client>=1.8.0,<2.0.0", "aiohttp>=3.12.15,<4.0.0"]
infra = ["redis[hiredis]>=5.1.0,<6.0.0"]

# Data processing (optional for reduced core footprint)
data-processing = ["pandas>=2.2.2,<3.0.0", "numpy>=1.26.4,<2.0.0"]

# Experimental/development features
analysis = ["matplotlib>=3.8.0,<4.0.0", "seaborn>=0.13.0,<1.0.0", "plotly>=5.17.0,<6.0.0"]
testing-extended = ["faker>=37.12.0,<38.0.0", "freezegun>=1.2.0,<2.0.0", "responses>=0.23.0,<1.0.0"]
ci = ["pre-commit>=4.3.0,<5.0.0", "pip-audit>=2.9.0,<3.0.0", "bandit>=1.7.9,<2.0.0"]

[project.scripts]
gpt-trader = "gpt_trader.cli:main"
coinbase-trader = "gpt_trader.cli:main"
# Agent tools - first-class commands for AI-assisted development
agent-check = "gpt_trader.agents.cli:check"
agent-impact = "gpt_trader.agents.cli:impact"
agent-map = "gpt_trader.agents.cli:map_deps"
agent-tests = "gpt_trader.agents.cli:tests"
agent-risk = "gpt_trader.agents.cli:risk"
agent-naming = "gpt_trader.agents.cli:naming"
agent-regenerate = "gpt_trader.agents.cli:regenerate"

[tool.poetry]
packages = [
    { include = "gpt_trader", from = "src" },
]
[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"
black = "^25.9.0"
mypy = "~1.10.0"
pre-commit = "^4.3.0"
yfinance = "^0.2.40"
types-requests = "^2.32.0.20240712"
pandas-stubs = "^2.2.2.240603"
types-pyyaml = "^6.0.12"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-xdist = "^3.0.0"
pytest-benchmark = "^5.2.0"
pytest-textual-snapshot = "^1.0.0"
faker = "^37.12.0"
freezegun = "^1.2.0"
trio = "^0.32.0"
hypothesis = "^6.144.0"
responses = "^0.23.0"
coverage = "^7.0.0"
pip-audit = "^2.9.0"
bandit = "^1.7.9"
diff-cover = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    # Linting and formatting
    "ruff>=0.14.3",
    "black>=25.9.0",
    "mypy>=1.10.0,<1.11.0",
    "pre-commit>=4.3.0",
    # Type stubs
    "types-pyyaml>=6.0.12",
    "types-requests>=2.32.0",
    "pandas-stubs>=2.2.2",
    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=5.2.0",
    "pytest-textual-snapshot>=1.0.0",
    "faker>=37.12.0",
    "freezegun>=1.2.0",
    "trio>=0.32.0",
    "hypothesis>=6.144.0",
    "responses>=0.23.0",
    "coverage>=7.0.0",
    # Security scanning
    "pip-audit>=2.9.0",
    "bandit>=1.7.9",
    "diff-cover>=9.0.0",
    # Data (for tests)
    "yfinance>=0.2.40",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
extend-exclude = [
    "data",
    "scripts/pickle_scanner.py",
    "scripts/pickle_to_joblib.py",
    "archived",
    "demos",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "ANN001", # Missing type annotation for function argument
    "ANN201", # Missing return type annotation for public function
]
ignore = [
    "S101",    # Use of assert (acceptable in tests)
    "E501",    # Line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN001", "ANN201"]
"tests/unit/conftest.py" = ["E402", "F403"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"
files = [
    "src/gpt_trader",
]

# Pytest configuration moved to pytest.ini for better organization
