[project]
name = "gpt-trader"
version = "0.1.0"
description = "Coinbase Advanced Trade trading system with DI container, live spot/CFM futures support, and strategy tooling."
readme = "README.md"
authors = [{name = "RJ + GPT-5"}]
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core trading dependencies (always required)
    "pydantic>=2.7.4,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    # Security (core for production trading)
    "cryptography>=43.0.0,<47.0.0",
    "pyjwt>=2.9.0,<3.0.0",
    "optuna>=4.0.0,<5.0.0",
    "pandas>=2.3.3,<3.0.0",
    "textual>=7.0.0,<8.0.0",
    # Transitive security fixes (pin minimum versions for CVE patches)
    "urllib3>=2.6.0,<3.0.0",   # GHSA-gm62-xv2j-4w53, GHSA-2xpw-w6gg-jr37
    "filelock>=3.20.3,<4.0.0", # GHSA-w853-jp5j-5j7f
]

[project.optional-dependencies]
# Core trading functionality
monitoring = ["psutil>=6.0.0,<7.0.0"]
live-trade = ["websocket-client>=1.8.0,<2.0.0", "aiohttp>=3.12.15,<4.0.0"]

# Observability (OpenTelemetry tracing)
observability = [
    "opentelemetry-api>=1.25.0,<2.0.0",
    "opentelemetry-sdk>=1.25.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.25.0,<2.0.0",
]

[project.scripts]
gpt-trader = "gpt_trader.cli:main"
local-ci = "gpt_trader.ci.local_ci:main"
# Agent tools - first-class commands for AI-assisted development
agent-check = "gpt_trader.agents.cli:check"
agent-impact = "gpt_trader.agents.cli:impact"
agent-map = "gpt_trader.agents.cli:map_deps"
agent-tests = "gpt_trader.agents.cli:tests"
agent-risk = "gpt_trader.agents.cli:risk"
agent-naming = "gpt_trader.agents.cli:naming"
agent-health = "gpt_trader.agents.cli:health"
agent-regenerate = "gpt_trader.agents.cli:regenerate"
agent-artifacts = "gpt_trader.agents.cli:artifacts"
agent-dedupe = "gpt_trader.agents.cli:dedupe"
agent-dedupe-triage = "gpt_trader.agents.cli:dedupe_triage"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    # Linting and formatting
    "ruff>=0.14.3,<0.15.0",
    "black>=25.12.0,<26.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pre-commit>=4.3.0,<5.0.0",
    # Type stubs
    "types-pyyaml>=6.0.12,<7.0.0",
    "types-requests>=2.32.0,<3.0.0",
    "pandas-stubs>=2.2.2,<3.0.0",
    # Testing
    "pytest>=8.2.0,<10.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
    "pytest-cov>=4.0.0,<8.0.0",
    "pytest-xdist>=3.0.0,<4.0.0",
    "pytest-textual-snapshot>=1.0.0,<2.0.0",
    "freezegun>=1.2.0,<2.0.0",
    "hypothesis>=6.144.0,<7.0.0",
    "coverage>=7.0.0,<8.0.0",
    # Security scanning
    "pip-audit>=2.9.0,<3.0.0",
    "bandit>=1.7.9,<2.0.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
extend-exclude = [
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "ANN001", # Missing type annotation for function argument
    "ANN201", # Missing return type annotation for public function
]
ignore = [
    "S101",    # Use of assert (acceptable in tests)
    "E501",    # Line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN001", "ANN201"]
"tests/unit/conftest.py" = ["E402", "F403"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"
# Keep most of the dynamic Textual surface out of the default mypy pass while
# ratcheting small state/type modules into normal CI coverage.
exclude = "(^|.*/)src/gpt_trader/tui/(?!(types|thresholds)\\.py$)(?!state_management/(?:__init__|validators)\\.py$).*\\.py$"
files = [
    "src/gpt_trader",
]

[[tool.mypy.overrides]]
module = [
    "gpt_trader.tui.types",
    "gpt_trader.tui.thresholds",
    "gpt_trader.tui.state_management",
    "gpt_trader.tui.state_management.validators",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = "gpt_trader.tui.*"
ignore_errors = true

# Pytest configuration moved to pytest.ini for better organization
